<resources>
    <string name="app_name">Food Planner</string>
    <string name="default_web_client_id">191513349211-gfdd07ncduep03nnjk7g0k3m24bqfuhu.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mealName">"Meal Name: "</string>
    <string name="mealCountry">"Origin Country: "</string>
    <string name="ingredients">"Ingredients: "</string>
    <string name="steps">"Steps: "</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="ingredient">Ingredient</string>
</resources>